--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,3 +16,6 @@ linters:
     - staticcheck
     - unused
     - whitespace
+linters-settings:
+  goimports:
+    local-prefixes: github.com/mreck/gotils
